@@ -1,3 +1,6 @@
+[B]2.5.0[/B]
+- updated: outfactored tagline scraping to common library
+
 [B]2.4.0[/B]
 - added: aspect tag to imdb poster
 
